--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "fandom-k": "link:",
     "motion": "^12.7.3",
     "react": "^19.0.0",
+    "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.5.0",
